fixes overflow

--- a/cdap-ui/app/cdap/components/ServiceStatus/ServiceStatus.less
+++ b/cdap-ui/app/cdap/components/ServiceStatus/ServiceStatus.less
@@ -155,7 +155,7 @@
   }
 
   .circle-dropdown-active {
-    z-index: 10000;
+    z-index: 1500;
   }
 
   .status-circle-green {
